--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -18,12 +18,12 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 
-title: Stable Diffusion UI v2
+title: Easy Diffusion v3
 #email: your-email@example.com
 description: >- # this means to ignore newlines until "baseurl:"
   A simple 1-click way to install and use Stable Diffusion on your own computer. No dependencies or technical knowledge required.
 baseurl: "/" # the subpath of your site, e.g. /blog
-url: "https://stable-diffusion-ui.github.io" # the base hostname & protocol for your site, e.g. http://example.com
+url: "https://easydiffusion.github.io" # the base hostname & protocol for your site, e.g. http://example.com
 #twitter_username: jekyllrb
 #github_username:  jekyll
 
