--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -21,7 +21,7 @@
 title: Easy Diffusion v3
 #email: your-email@example.com
 description: >- # this means to ignore newlines until "baseurl:"
-  A simple 1-click way to install and use Stable Diffusion on your own computer. No dependencies or technical knowledge required.
+  A simple 1-click way to create beautiful images on your computer, by installing Stable Diffusion. No dependencies or technical knowledge required
 baseurl: "/" # the subpath of your site, e.g. /blog
 url: "https://easydiffusion.github.io" # the base hostname & protocol for your site, e.g. http://example.com
 #twitter_username: jekyllrb
